--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -1,15 +1,20 @@
 [Window][Debug##Default]
 Pos=106,53
-Size=400,400
+Size=400,98
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=721,13
 Size=550,680
-Collapsed=1
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=60,60
 Size=345,134
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=57,21
+Size=569,109
 Collapsed=0
 
