--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=106,53
-Size=400,98
+Pos=242,93
+Size=406,251
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=721,13
-Size=550,680
+Size=373,464
 Collapsed=0
 
 [Window][Hello, world!]
@@ -16,5 +16,15 @@ Collapsed=0
 [Window][About Dear ImGui]
 Pos=57,21
 Size=569,109
+Collapsed=0
+
+[Window][Configuration]
+Pos=274,434
+Size=382,280
+Collapsed=0
+
+[Window][Closing Window]
+Pos=101,74
+Size=260,306
 Collapsed=0
 
