Starting Configuration Window

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -4,7 +4,7 @@ Size=406,251
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=721,13
+Pos=731,66
 Size=373,464
 Collapsed=1
 
@@ -19,12 +19,17 @@ Size=569,109
 Collapsed=0
 
 [Window][Configuration]
-Pos=274,434
-Size=382,280
-Collapsed=1
+Pos=207,115
+Size=378,280
+Collapsed=0
 
 [Window][Closing Window]
 Pos=101,74
 Size=260,306
 Collapsed=1
+
+[Window][Application]
+Pos=216,231
+Size=212,48
+Collapsed=0
 
