--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -19,9 +19,9 @@ Size=569,109
 Collapsed=0
 
 [Window][Configuration]
-Pos=207,115
-Size=378,280
-Collapsed=0
+Pos=207,129
+Size=378,266
+Collapsed=1
 
 [Window][Closing Window]
 Pos=101,74
@@ -31,5 +31,10 @@ Collapsed=1
 [Window][Application]
 Pos=216,231
 Size=212,48
+Collapsed=0
+
+[Window][About Nistal Engine]
+Pos=60,60
+Size=998,1018
 Collapsed=0
 
