--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="Glew\include\wglew.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="UIAbout.h" />
     <ClInclude Include="UIConfiguration.h" />
     <ClInclude Include="UIWindow.h" />
     <ClInclude Include="ImGui\imconfig.h" />
@@ -221,6 +222,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="Primitive.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="UIAbout.cpp" />
     <ClCompile Include="UIConfiguration.cpp" />
     <ClCompile Include="UIWindow.cpp" />
   </ItemGroup>
