Console window added

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -19,7 +19,7 @@ Size=569,109
 Collapsed=0
 
 [Window][Configuration]
-Pos=0,20
+Pos=107,14
 Size=615,1017
 Collapsed=0
 
@@ -36,5 +36,10 @@ Collapsed=0
 [Window][About Nistal Engine]
 Pos=403,88
 Size=615,383
+Collapsed=0
+
+[Window][Console]
+Pos=67,67
+Size=331,337
 Collapsed=0
 
