--- a/Nistal Engine/Nistal Engine.vcxproj.filters
+++ b/Nistal Engine/Nistal Engine.vcxproj.filters
@@ -306,6 +306,9 @@
     <ClInclude Include="UIAbout.h">
       <Filter>Sources\Modules\UI</Filter>
     </ClInclude>
+    <ClInclude Include="UIConsole.h">
+      <Filter>Sources\Modules\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -471,6 +474,9 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="UIAbout.cpp">
+      <Filter>Sources\Modules\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIConsole.cpp">
       <Filter>Sources\Modules\UI</Filter>
     </ClCompile>
   </ItemGroup>
