--- a/Nistal Engine/Nistal Engine.vcxproj.filters
+++ b/Nistal Engine/Nistal Engine.vcxproj.filters
@@ -499,5 +499,8 @@
     <None Include="MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_SSE.inl">
       <Filter>Sources\MathGeoLib</Filter>
     </None>
+    <None Include="config.json">
+      <Filter>Sources</Filter>
+    </None>
   </ItemGroup>
 </Project>
