--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="Glew\include\wglew.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Parson\parson.h" />
     <ClInclude Include="sphereEngine.h" />
     <ClInclude Include="UIAbout.h" />
     <ClInclude Include="UIConfiguration.h" />
@@ -222,6 +223,7 @@
     <ClCompile Include="ModuleSceneIntro.cpp" />
     <ClCompile Include="ModuleUI.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
+    <ClCompile Include="Parson\parson.c" />
     <ClCompile Include="Primitive.cpp" />
     <ClCompile Include="sphereEngine.cpp" />
     <ClCompile Include="Timer.cpp" />
