Loading FBX Model (using path on JSON)
Now we have to Draw() it

--- a/Nistal Engine/Game/config.json
+++ b/Nistal Engine/Game/config.json
@@ -5,6 +5,9 @@
     "Max FPS": 30,
     "VSYNC": false
   },
+  "Model": {
+    "Path": "Models/warrior.fbx"
+  },
   "Window": {
     "Brightness": 100,
     "Width": 1,
