Trying to load another model (descr)
It does wierd things, hmm. FBX rendering before UI

--- a/Nistal Engine/Game/config.json
+++ b/Nistal Engine/Game/config.json
@@ -6,7 +6,7 @@
     "VSYNC": false
   },
   "Model": {
-    "Path": "Models/warrior.fbx"
+    "Path": "Models/Ice_Block_LP.fbx"
   },
   "Window": {
     "Brightness": 100,
