Loading Normals but can't test for now

--- a/Nistal Engine/Game/config.json
+++ b/Nistal Engine/Game/config.json
@@ -6,7 +6,7 @@
     "VSYNC": false
   },
   "Model": {
-    "Path": "Models/Ice_Block_LP.fbx"
+    "Path": "Models/BakerHouse.fbx"
   },
   "Window": {
     "Brightness": 100,
