Loading Texture through Path
Draw function in progress (it is commented with name "DrawTexture")

--- a/Nistal Engine/Game/config.json
+++ b/Nistal Engine/Game/config.json
@@ -6,7 +6,8 @@
     "VSYNC": false
   },
   "Model": {
-    "Path": "Models/BakerHouse.fbx"
+    "Path": "Models/BakerHouse.fbx",
+    "Texture Path": "Textures/Baker_house.png"
   },
   "Window": {
     "Brightness": 100,
