--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -102,7 +102,7 @@
     <ClInclude Include="GOMesh.h" />
     <ClInclude Include="GOTransform.h" />
     <ClInclude Include="ModuleFS.h" />
-    <ClInclude Include="ModuleGameObject.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="ModuleLoadFBX.h" />
     <ClInclude Include="ModuleTexture.h" />
     <ClInclude Include="Parson\parson.h" />
@@ -245,7 +245,7 @@
     <ClCompile Include="MathGeoLib\include\Time\Clock.cpp" />
     <ClCompile Include="ModuleCamera3D.cpp" />
     <ClCompile Include="ModuleFS.cpp" />
-    <ClCompile Include="ModuleGameObject.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModuleLoadFBX.cpp" />
     <ClCompile Include="ModuleRenderer3D.cpp" />
