Inspector Window Added

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -43,3 +43,13 @@ Pos=-159,65
 Size=1089,795
 Collapsed=0
 
+[Window][Hierarchy]
+Pos=60,60
+Size=541,530
+Collapsed=0
+
+[Window][Inspector]
+Pos=941,23
+Size=336,708
+Collapsed=0
+
