--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=242,93
+Pos=2,21
 Size=406,251
 Collapsed=0
 
@@ -49,7 +49,12 @@ Size=541,530
 Collapsed=0
 
 [Window][Inspector]
-Pos=942,23
-Size=336,737
+Pos=1021,23
+Size=257,737
+Collapsed=0
+
+[Window][GameObjects Hierarchy]
+Pos=2,17
+Size=292,340
 Collapsed=0
 
