fixed little inspector bug

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -39,7 +39,7 @@ Size=615,383
 Collapsed=0
 
 [Window][Console]
-Pos=6,655
+Pos=244,614
 Size=1272,354
 Collapsed=0
 
@@ -59,6 +59,16 @@ Size=240,7680
 Collapsed=0
 
 [Window][BakerHouse]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][Cube]
+Pos=1440,18
+Size=480,7627
+Collapsed=0
+
+[Window][wooden_house]
 Pos=960,18
 Size=320,7680
 Collapsed=0
