Inspector bugs fixed

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -64,11 +64,16 @@ Size=320,7680
 Collapsed=0
 
 [Window][Cube]
-Pos=1440,18
-Size=480,7627
+Pos=960,18
+Size=320,7680
 Collapsed=0
 
 [Window][wooden_house]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][Torus]
 Pos=960,18
 Size=320,7680
 Collapsed=0
