Cleaning all includes

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -19,8 +19,8 @@ Size=569,109
 Collapsed=0
 
 [Window][Configuration]
-Pos=115,48
-Size=258,1017
+Pos=-2,22
+Size=258,1004
 Collapsed=0
 
 [Window][Closing Window]
@@ -39,8 +39,8 @@ Size=615,363
 Collapsed=0
 
 [Window][Console]
-Pos=244,614
-Size=1272,354
+Pos=0,785
+Size=1280,238
 Collapsed=0
 
 [Window][Hierarchy]
@@ -74,6 +74,11 @@ Size=320,7680
 Collapsed=0
 
 [Window][Torus]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][Grandma_LP]
 Pos=960,18
 Size=320,7680
 Collapsed=0
