Little Code Cleaning

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -83,3 +83,13 @@ Pos=960,18
 Size=320,7680
 Collapsed=0
 
+[Window][street2]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][Mineral_LP]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
