--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="Glew\include\wglew.h" />
     <ClInclude Include="glmath.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="GOCamera.h" />
     <ClInclude Include="GOComponent.h" />
     <ClInclude Include="GOMaterial.h" />
     <ClInclude Include="GOMesh.h" />
@@ -201,6 +202,7 @@
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="cubeEngine.cpp" />
     <ClCompile Include="glmath.cpp" />
+    <ClCompile Include="GOCamera.cpp" />
     <ClCompile Include="GOComponent.cpp" />
     <ClCompile Include="GOMaterial.cpp" />
     <ClCompile Include="GOMesh.cpp" />
