Trying to Draw Own Model
Weird error with ModuleImporter.cpp when compiling

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -104,6 +104,11 @@ Size=320,7680
 Collapsed=0
 
 [Window][Street]
+Pos=1440,18
+Size=480,7627
+Collapsed=0
+
+[Window][Street environment_V01]
 Pos=960,18
 Size=320,7680
 Collapsed=0
