Working on save window

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-Pos=180,695
-Size=406,251
+Pos=0,1005
+Size=1280,238
 Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=731,66
 Size=373,464
-Collapsed=1
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=60,60
@@ -121,5 +121,10 @@ Collapsed=0
 [Window][Save]
 Pos=60,60
 Size=32,35
+Collapsed=0
+
+[Window][Save Scene]
+Pos=480,235
+Size=320,100
 Collapsed=0
 
