--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="GOMaterial.h" />
     <ClInclude Include="GOMesh.h" />
     <ClInclude Include="GOTransform.h" />
+    <ClInclude Include="ImGui\ImGuizmo.h" />
     <ClInclude Include="ModuleFS.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ModuleImporter.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="GOMesh.cpp" />
     <ClCompile Include="GOTransform.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
+    <ClCompile Include="ImGui\ImGuizmo.cpp" />
     <ClCompile Include="ImGui\imgui_demo.cpp" />
     <ClCompile Include="ImGui\imgui_draw.cpp" />
     <ClCompile Include="ImGui\imgui_impl_opengl3.cpp" />
