added time window files

--- a/Nistal Engine/Nistal Engine.vcxproj
+++ b/Nistal Engine/Nistal Engine.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="UIHierarchy.h" />
     <ClInclude Include="UIInspector.h" />
     <ClInclude Include="UISave.h" />
+    <ClInclude Include="UITime.h" />
     <ClInclude Include="UIWindow.h" />
     <ClInclude Include="ImGui\imconfig.h" />
     <ClInclude Include="ImGui\imgui.h" />
@@ -272,6 +273,7 @@
     <ClCompile Include="UIHierarchy.cpp" />
     <ClCompile Include="UIInspector.cpp" />
     <ClCompile Include="UISave.cpp" />
+    <ClCompile Include="UITime.cpp" />
     <ClCompile Include="UIWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
