--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -104,8 +104,8 @@ Size=320,7680
 Collapsed=0
 
 [Window][Street]
-Pos=1440,18
-Size=480,7627
+Pos=960,18
+Size=320,7680
 Collapsed=0
 
 [Window][Street environment_V01]
@@ -149,6 +149,11 @@ Size=320,7680
 Collapsed=0
 
 [Window][Line002]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_004]
 Pos=960,18
 Size=320,7680
 Collapsed=0
