LShift + P -> Unparent to root done
We have to update UI Hierarchy now

--- a/Nistal Engine/Game/imgui.ini
+++ b/Nistal Engine/Game/imgui.ini
@@ -158,3 +158,28 @@ Pos=960,18
 Size=320,7680
 Collapsed=0
 
+[Window][City_building_001]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_013]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_026]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_030]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
+[Window][City_building_011]
+Pos=960,18
+Size=320,7680
+Collapsed=0
+
